--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "format": "prettier --write src/**/*"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "prettier": "2.3.1"
   }
 }
